loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:4: error: ';' expected but '{' found.
while (!estSurBlanc()) {
                       ^